src/tailwind.pcss
/* purgecss start ignore */
@tailwind base;
@tailwind components;
/* purgecss end ignore */

@tailwind utilities;

.icon {
    @apply h-16 w-16;
    transform: scale(1);
    animation: pulse 2s infinite;
}
@keyframes pulse {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(0.9);
    }
    100% {
        transform: scale(1);
    }
}

h2 {
    @apply text-shadow text-xl text-white font-bold;
}

h3 {
    @apply text-xl font-bold text-gray-800;
}

.sub-text {
    @apply text-shadow text-white font-semibold;
}

.card {
    @apply inline-block shadow-xl;
    border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
    border: solid 5px #285e61;
}

.c {
    will-change: transform, opacity;
}

.text-shadow {
    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
}

